--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "redux-todomvc",
   "version": "1.0.0",
   "description": "Redux TodoMVC application.",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "react": "^0.14.5",
-    "react-redux": "^4.0.6",
-    "redux": "^3.0.5"
-  },
-  "devDependencies": {
-    "redux-devtools": "^3.0.1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "NODE_ENV=dev npm run prebuild",
+    "start": "NODE_ENV=dev webpack-dev-server --colors --hot --inline",
+    "prebuild": "npm run clean",
+    "build": "npm run build:js",
+    "build:js": "webpack --colors --progress",
+    "clean": "npm run clean:js",
+    "clean:js": "rimraf ./public/js",
+    "watch": "NODE_ENV=dev npm run prebuild && NODE_ENV=dev webpack --colors --progress --watch",
+    "deploy": "npm run deploy:master && npm run deploy:gh-pages",
+    "deploy:master": "git push origin master",
+    "deploy:gh-pages": "gh-pages --dist public"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sylvaindethier/redux-todomvc.git"
+    "url": "https://github.com/sylvaindethier/redux-todomvc.git"
   },
   "author": "Sylvain Dethier",
   "license": "MIT",
@@ -24,4 +26,29 @@
     "url": "https://github.com/sylvaindethier/redux-todomvc/issues"
   },
   "homepage": "https://github.com/sylvaindethier/redux-todomvc#readme",
+  "dependencies": {
+    "react": "^0.14.5",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.5"
+  },
+  "devDependencies": {
+    "babel-core": "^6.3.26",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-external-helpers-2": "^6.3.13",
+    "babel-plugin-syntax-jsx": "^6.3.13",
+    "babel-plugin-transform-react-jsx": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^3.0.0",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.13.1",
+    "gh-pages": "^0.8.0",
+    "redux-devtools": "^3.0.1",
+    "rimraf": "^2.5.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
+  }
 }
