--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Redux TodoMVC application.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "npm run clean && npm run build:assets",
+    "build": "npm run build:js",
+    "build:assets": "./scripts/build-html.sh && ./scripts/build-css.sh",
+    "build:js": "webpack --colors --progress",
+    "clean": "npm run clean:assets && npm run clean:js",
+    "clean:assets": "rimraf public/css && mkdir -p public/css",
+    "clean:js": "rimraf public/js && mkdir -p public/js",
     "prestart": "NODE_ENV=dev npm run prebuild",
     "start": "NODE_ENV=dev webpack-dev-server --colors --hot --inline",
-    "prebuild": "npm run clean",
-    "build": "npm run build:js",
-    "build:js": "webpack --colors --progress",
-    "clean": "npm run clean:js",
-    "clean:js": "rimraf ./public/js",
     "watch": "NODE_ENV=dev npm run prebuild && NODE_ENV=dev webpack --colors --progress --watch",
     "deploy": "npm run deploy:master && npm run deploy:gh-pages",
     "deploy:master": "git push origin master",
@@ -28,17 +30,18 @@
   "homepage": "https://github.com/sylvaindethier/redux-todomvc#readme",
   "dependencies": {
     "react": "^0.14.5",
+    "react-dom": "^0.14.5",
     "react-redux": "^4.0.6",
     "redux": "^3.0.5"
   },
   "devDependencies": {
-    "babel-core": "^6.3.26",
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.0",
     "babel-plugin-external-helpers-2": "^6.3.13",
     "babel-plugin-syntax-jsx": "^6.3.13",
     "babel-plugin-transform-react-jsx": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "eslint": "^1.10.3",
