--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "npm run clean && npm run build:assets",
-    "build": "npm run build:js",
+    "build": "NODE_ENV=production npm run build:js",
     "build:assets": "./scripts/build-html.sh && ./scripts/build-css.sh",
     "build:js": "webpack --colors --progress",
     "clean": "npm run clean:assets && npm run clean:js",
@@ -32,7 +32,8 @@
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
     "react-redux": "^4.0.6",
-    "redux": "^3.0.5"
+    "redux": "^3.0.5",
+    "redux-actions": "^0.9.0"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
