replace logger w/ redux-logger

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.13.1",
     "gh-pages": "^0.8.0",
+    "redux-logger": "^2.3.2",
     "rimraf": "^2.5.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
