--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "description": "Redux TodoMVC application.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild": "npm run clean && npm run build:assets",
-    "build": "NODE_ENV=production npm run build:js",
-    "build:assets": "./scripts/build-html.sh && ./scripts/build-css.sh",
-    "build:js": "webpack --colors --progress",
-    "clean": "npm run clean:assets && npm run clean:js",
-    "clean:assets": "rimraf public/css && mkdir -p public/css",
-    "clean:js": "rimraf public/js && mkdir -p public/js",
-    "prestart": "NODE_ENV=dev npm run prebuild",
-    "start": "NODE_ENV=dev webpack-dev-server --colors --hot --inline",
-    "watch": "NODE_ENV=dev npm run prebuild && NODE_ENV=dev webpack --colors --progress --watch",
+    "prebuild": "npm run clean && babel-node ./scripts/build-rootString",
+    "build": "NODE_ENV=production webpack --colors --progress",
+    "postbuild": "npm run clean:deps",
+    "clean": "rimraf public/css && rimraf public/js && npm run clean:deps",
+    "clean:deps": "rimraf src/rootString.js",
+    "dev": "NODE_ENV=dev npm run prebuild && NODE_ENV=dev webpack --colors --progress",
+    "watch": "npm run clean && NODE_ENV=dev webpack --colors --progress --watch",
+    "start": "npm run clean && NODE_ENV=dev webpack-dev-server --colors --hot --inline",
     "deploy": "npm run deploy:master && npm run deploy:gh-pages",
     "deploy:master": "git push origin master",
     "deploy:gh-pages": "gh-pages --dist public"
@@ -34,9 +32,11 @@
     "react-dom": "^0.14.5",
     "react-redux": "^4.0.6",
     "redux": "^3.0.5",
-    "redux-actions": "^0.9.0"
+    "redux-actions": "^0.9.0",
+    "todomvc-app-css": "^2.0.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.0",
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.0",
     "babel-plugin-external-helpers-2": "^6.3.13",
@@ -46,13 +46,17 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^3.0.0",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.13.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.8.0",
+    "html-webpack-plugin": "^2.6.2",
     "redux-logger": "^2.3.2",
     "rimraf": "^2.5.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   }
