--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Redux TodoMVC application.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild": "npm run clean && babel-node ./scripts/build-rootString",
+    "prebuild": "npm run clean && npm run build:deps",
     "build": "NODE_ENV=production webpack --colors --progress",
     "postbuild": "npm run clean:deps",
-    "clean": "rimraf dist/css && rimraf dist/js && npm run clean:deps",
+    "build:deps": "babel-node ./scripts/build-rootString",
     "clean:deps": "rimraf src/rootString.js",
-    "dev": "NODE_ENV=dev npm run prebuild && NODE_ENV=dev webpack --colors --progress",
+    "clean": "rimraf dist && npm run clean:deps",
+    "dev": "npm run clean && NODE_ENV=dev webpack --colors --progress",
     "watch": "npm run clean && NODE_ENV=dev webpack --colors --progress --watch",
     "start": "npm run clean && NODE_ENV=dev webpack-dev-server --colors --hot --inline",
     "deploy": "npm run deploy:master && npm run deploy:gh-pages",
