--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "npm run clean && NODE_ENV=dev webpack-dev-server --colors --hot --inline",
     "deploy": "npm run deploy:master && npm run deploy:gh-pages",
     "deploy:master": "git push origin master",
-    "deploy:gh-pages": "gh-pages"
+    "deploy:gh-pages": "gh-pages --dist dist"
   },
   "repository": {
     "type": "git",
