initialize testing w/ mocha

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Redux TodoMVC application.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild": "npm run clean && npm run build:deps",
+    "test": "mocha --compilers js:babel-core/register --recursive --require ./src/__test__/setup.js ./src/__test__",
+    "prebuild": "npm run test && npm run clean && npm run build:deps",
     "build": "NODE_ENV=production webpack --colors --progress",
     "postbuild": "npm run clean:deps",
     "build:deps": "NODE_ENV=production babel-node ./scripts/build-rootString",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.4.0",
+    "babel-core": "^6.4.5",
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.0",
     "babel-plugin-external-helpers-2": "^6.3.13",
@@ -51,9 +52,11 @@
     "eslint-config-airbnb": "^3.0.0",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.13.1",
+    "expect": "^1.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.8.0",
     "html-webpack-plugin": "^2.6.2",
+    "mocha": "^2.3.4",
     "redux-logger": "^2.3.2",
     "rimraf": "^2.5.0",
     "style-loader": "^0.13.0",
